2001-01-18  Tor Lillqvist  <tml@iki.fi>

	* gdk-pixbuf-io.c (get_libdir): (Win32) Use the new
	g_win32_get_package_installation_subdirectory() function.
	(gtk_win32_get_installation_directory): Remove this then.

2001-01-01  Havoc Pennington  <hp@redhat.com>

	* Makefile.am (libgdk_pixbuf_1_3_la_LDFLAGS): add
	@LIBTOOL_EXPORT_OPTIONS@

2000-12-30  Tor Lillqvist  <tml@iki.fi>

	* gdk_pixbuf.def: Update.

2000-12-16  Havoc Pennington  <hp@pobox.com>

	* gdk-pixbuf-animation.c (gdk_pixbuf_animation_new_from_file): ref
	the pixbuf in the frame, so we can use gdk_pixbuf_frame_free
	(gdk_pixbuf_frame_copy): new function
	(gdk_pixbuf_frame_free): new function
	(gdk_pixbuf_frame_get_type): new function
	(GDK_TYPE_PIXBUF_FRAME): macro to get type for GdkPixbufFrame

Tue Nov 14 11:51:26 2000  Owen Taylor  <otaylor@redhat.com>

	* Makefile.am: Add -avoid-version for all modules.

2000-11-13  Havoc Pennington  <hp@redhat.com>

	* io-png.c (png_simple_error_callback): fix error message to not
	say "save" since it's used for loading

2000-11-11  Hans Breuer <Hans@Breuer.Org>

	* gdk-pixbuf-io.c : Fix all function prototype macros for self 
	contained image handlers (!USE_G_MODULE). Files to save should
	be opened in binary mode, fopen(s, "wb").

	* io-xpm.c : added HAVE_UNISTD_H condition

2000-11-11  Tor Lillqvist  <tml@iki.fi>

	* gdk_pixbuf.def: Add gdk_pixbuf_new_subpixbuf.

	* io-tiff.c (gdk_pixbuf__tiff_image_begin_load): Use
	g_file_open_tmp() (just added to GLib) instead of mkstemp() (or
	mktemp() and open()).
	
	* io-xpm.c (gdk_pixbuf__xpm_image_begin_load): Ditto.

2000-11-01  Havoc Pennington  <hp@pobox.com>

	* gdk-pixbuf.c (gdk_pixbuf_new_subpixbuf): New function to create 
	a pixbuf pointing to a subregion of another pixbuf.

2000-10-16  Tor Lillqvist  <tml@iki.fi>

	* gdk-pixbuf-io.c: Define also m_save (for the non-gmodule case).

2000-10-16  Havoc Pennington  <hp@redhat.com>

	* gdk-pixbuf-io.c (gdk_pixbuf_get_module)