@@ -28,11 +28,6 @@
 #include "gdk-pixbuf-private.h"
 #include "gdk-pixbuf-io.h"
 
-#ifdef G_OS_WIN32
-#define STRICT
-#include <windows.h>
-#endif
-
 
 
 static gboolean
